syntax = "proto3";

package shortener;

option go_package = "shortener/proto";

message StoredLink{
    string id = 1;
    string full_url = 2;
}

message BatchLink {
    string correlation_id = 1;
    string original_url = 2;
}

message StoredBatchLink {
    string correlation_id = 1;
    string short_url = 2;
}

message LinkList {
    repeated string links = 1;
}

message AddLinkRequest {
    string link = 1;
}

message AddLinkResponse {
    string error = 1;
}

message GetLinkRequest{
    string url_id = 1;
}

message GetLinkResponse{
    string url_id = 1;
    string full_url = 2;
    string error = 3;
}

message GetUserUrlsRequest{
    string user_id = 1;
}

message GetUserUrlsResponse{
    repeated StoredLink links = 1;
    string error = 2;
}

message DeleteUserUrlsRequest{
    repeated string url_ids = 1;
}

message DeleteUserUrlsResponse{
    string error = 1;
}

message ShortenBatchRequest {
    repeated BatchLink batch_links = 1;
}

message ShortenBatchResponse {
    repeated StoredBatchLink stored_batch_links = 1;
    string error = 2;
}

service ShortenerService {
    rpc AddUrl(AddLinkRequest) returns (AddLinkResponse);
    rpc GetUrl(GetLinkRequest) returns (GetLinkResponse);
    rpc ListUserUrls(GetUserUrlsRequest) returns (GetUserUrlsResponse);
    rpc DeleteUserUrls(DeleteUserUrlsRequest) returns (DeleteUserUrlsResponse);
    rpc ShortenBatch(ShortenBatchRequest) returns (ShortenBatchResponse);
}

